k8s/manifest.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: wireguard-manager
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wireguard-manager-nginx-ingress
  namespace: wireguard-manager
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - your.domain # TODO: Edit me!!!
    secretName: wireguard-manager-tls
  rules:
  - host: your.domain # TODO: Edit me!!!
    http:
      paths:
      - backend:
          serviceName: wireguard-manager-web
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard-manager-web
  namespace: wireguard-manager
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: wireguard-manager
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard-manager-vpn
  namespace: wireguard-manager
spec:
  type: LoadBalancer
  ports:
  - name: wireguard
    port: 51820
    targetPort: 51820
    protocol: UDP
  selector:
    app: wireguard-manager
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wireguard-manager
  namespace: wireguard-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wireguard-manager
      version: v1
  template:
    metadata:
      labels:
        app: wireguard-manager
        version: v1
    spec:
      serviceAccount: wireguard-manager-service-account
      volumes:
        - name: wireguard-claim
          persistentVolumeClaim:
            claimName: wireguard-claim
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-data
      containers:
        - name: app
          image: dashlabsai/wireguard-manager
          securityContext:
            capabilities:
              add: ["NET_ADMIN", "SYS_MODULE"]
          resources:
            limits:
              cpu: '50m'
              memory: '100Mi'
          volumeMounts:
            - name: wireguard-claim
              mountPath: /etc/wireguard
          imagePullPolicy: Always
        - name: db
          image: mongo
          ports:
          - containerPort: 27017
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
          resources:
            limits:
              cpu: '50m'
              memory: '100Mi'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
